<resources>
    <string name="admin_label">Admin</string>
    <string name="cd_add_button">add button</string>
    <string name="cd_application_logo">application logo</string>
    <string name="cd_delete">delete</string>
    <string name="dialog_household_banned_text">You\'ve been removed from this group press \'OK\' to setup a new group</string>
    <string name="dialog_household_banned_title">Insufficient permissions</string>
    <string name="dialog_household_full_text">Ask the admin of the group to first remove someone</string>
    <string name="dialog_household_full_title">Group is full!</string>
    <string name="dialog_household_overwrite_text">Your current group will be overwritten. All data will be lost. Are you sure?</string>
    <string name="dialog_household_overwrite_title">Group overwrite</string>
    <string name="dialog_household_similar_text">You\'re already in this group. Press \'OK\' to continue</string>
    <string name="dialog_household_similar_title">Same group!</string>
    <string name="edit_task_date_hint">Date</string>
    <string name="edit_task_time_hint">Time</string>
    <string name="edit_task_description_hint">Description</string>
    <string name="edit_task_user_hint">Persoon</string>
    <string name="empty_list_state_text_tasks">Add your first task by clicking the + button</string>
    <string name="empty_list_state_title_tasks">No tasks</string>
    <string name="empty_list_state_title_users">No users</string>
    <string name="empty_list_state_text_users">Add your first friend by clicking the + button</string>
    <string name="error_connection">Please check your internet connection</string>
    <string name="error_generic">Something went wrong</string>
    <string name="error_list_state_text">Something went wrong, try again later</string>
    <string name="error_list_state_title">Whoops!</string>
    <string name="task_next">Next: %1$s</string>
    <string name="task_next_snackbar">\'%1$s\' is updated to: %2$s</string>
    <string name="next">next</string>
    <string name="task_overdue">OVERDUE: %1$s</string>
    <string name="generate_categories_button_text">Generate</string>
    <string name="invite_title">Share invite link</string>
    <string name="loading">loading</string>
    <string name="notification_default_msg">it\'s time do to some chores!</string>
    <string name="notification_message">It\'s time for: %1$s</string>
    <string name="notification_title">Hi %1$s</string>
    <string name="preferences_analytics">User statistics</string>
    <string name="preferences_analytics_description">By sending anonymous user data, you will help improve this application</string>
    <string name="preferences_analytics_header">Privacy</string>
    <string name="preferences_display_dark_mode">Dark mode</string>
    <string name="preferences_display_header">Display</string>
    <string name="preferences_about_header">About</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="privacy_policy"><![CDATA[
    <p>I built Tasqs app as an Ad Supported app. This SERVICE is provided by me at no cost and is intended for use as is.
  <br><br>This page is used to inform visitors regarding the policies with the collection, use, and disclosure of Personal Information if anyone decided to use this service.
  <br><br>If you choose to use this service, then you agree to the collection and use of information in relation to this policy. The Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
  <br><br>The terms used in this Privacy Policy have the same meanings as in the Terms and Conditions, which is accessible at Tasqs unless otherwise defined in this Privacy Policy.
  <br><br><strong>Information Collection and Use</strong><br>For a better experience, while using this service, I may require you to provide me with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
  <br><br>The app does use third party services that may collect information used to identify you.
  <br><br>Link to privacy policy of third party service providers used by the app
</p><ul><li><a href="https://policies.google.com/privacy">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li><li><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li><li><a href="https://docs.fabric.io/android/fabric/data-privacy.html">Fabric</a></li><li><a href="https://try.crashlytics.com/terms/privacy-policy.pdf">Crashlytics</a></li></ul><br><p><strong>Log Data</strong></p><p>I want to inform you that whenever you use this service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing this service, the time and date of your use of the service, and other statistics.</p><p><br></p><p><strong>Cookies</strong></p><p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.</p><p><br></p><p>This service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this service.</p><p><br></p><p><strong>Service Providers</strong></p><p>I may employ third-party companies and individuals due to the following reasons:</p><ul><li>To facilitate this service;</li><li>To provide the service on our behalf;</li><li>To perform service-related services; or</li><li>To assist us in analyzing how this service is used.</li></ul><p><br></p><p>I want to inform users of this service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p><p><br></p><p><strong>Security</strong></p><p>I value your trust in providing us your Personal Information, thus I\'m striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p><p><br></p><p><strong>Links to Other Sites</strong></p><p>This service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p><p><br></p><p><strong>Children’s Privacy</strong></p><p>This services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I will immediately delete this from the servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to take necessary actions.</p><p><br></p><p><strong>Changes to This Privacy Policy</strong></p><p>This privacy Policy may be updated from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p><p><br></p><p><strong>Contact</strong></p><p>If you have any questions or suggestions about the Privacy Policy, do not hesitate to contact me at
  <a href="mailto:mittylabs@gmail.com" target="_blank">mittylabs@gmail.com</a></p><p>&nbsp;</p><p><br></p>
]]></string>
    <string name="repeat_checkbox_text">Repeat</string>
    <string name="rotate_user_checkbox_text">Rotate between users</string>
    <string name="repeat_interval_hint">repeat interval</string>
    <string name="repeat_label_interval_text_day">D</string>
    <string name="repeat_label_interval_text_month">M</string>
    <string name="repeat_label_interval_text_week">W</string>
    <string name="repeat_label_interval_text_year">Y</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toolbar_title_edit_task">Edit \'%1$s\'</string>
    <string name="toolbar_title_info_task">Task info</string>
    <string name="toolbar_title_new_task">New task</string>
    <string name="toolbar_title_tasks">Tasks</string>
    <string name="toolbar_title_users">Users</string>
    <string name="easter_egg_enabled">wooo!</string>
    <string name="easter_egg_already_enabled">Stahp it!</string>
    <string name="easter_egg_message">Click %1$d more time(s)</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string-array name="night_mode_items">
        <item>@string/night_mode_label_auto</item>
        <item>@string/night_mode_label_off</item>
        <item>@string/night_mode_label_on</item>
    </string-array>
    <string-array name="night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="night_mode_label_auto">Follow system</string>
    <string name="night_mode_label_off">Off</string>
    <string name="night_mode_label_on">On</string>
    <string name="task_edit_error_empty_description">Please enter a description</string>
    <string name="task_edit_error_empty_user">Please wait for users to be loaded</string>
    <string name="button_done_text">Done</string>
    <string name="tasks_done">%1$d tasks are done and updated</string>
    <string name="empty_string"/>
    <string name="repeat_weekday_mo">M</string>
    <string name="repeat_weekday_tu">T</string>
    <string name="repeat_weekday_we">W</string>
    <string name="repeat_weekday_th">T</string>
    <string name="repeat_weekday_fr">F</string>
    <string name="repeat_weekday_sa">S</string>
    <string name="repeat_weekday_su">S</string>
    <string name="repeat_mo">mo</string>
    <string name="repeat_tu">tu</string>
    <string name="repeat_we">we</string>
    <string name="repeat_th">th</string>
    <string name="repeat_fr">fr</string>
    <string name="repeat_sa">sa</string>
    <string name="repeat_su">su</string>
    <string name="is_repeated_for_every">Is repeated for every</string>
    <string name="is_repeated_on">Is repeated on</string>
    <string name="default_custom_recurrence">1</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="delete_dialog_text">Are you sure you want to delete %1$d tasks?"</string>
    <string name="delete_dialog_text_single">Are you sure you want to delete this task?"</string>
    <string name="info_task_next_date">Next task on</string>
    <string name="info_repeated_title">Repeated on</string>
    <string name="info_task_description_title">Description</string>
    <string name="info_task_assinged_title">Assigned to</string>
</resources>