<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/week_picker_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/is_repeated_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/week_picker_button_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week_picker_title"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_monday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_mo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_tuesday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_tu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_wednesday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_we" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_thursday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_th" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_friday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_fr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_saturday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_sa" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_picker_sunday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_weekday_su" />

    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>